[package]
name = "xdr_brk_enum"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A proc-macro crate that provides a derive macro for serde::Serialize and serde::Deserialize on Rust enum types, to support XDR (External Data Representation) serialization and deserialization."
keywords = ["proc-macro", "xdr", "serialization", "deserialization", "binary"]
categories = ["encoding"]
readme = "README.md"
repository = "https://github.com/algebnaly/xdr_brk_enum"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
serde = "1.0"
syn = "2.0"
